# Cai_Agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  README.md  README.zh-CN.md  cai-agent.toml  create_desktop_files.py  create_random_files.py  create_test_folder.ps1
cai-agent/: README.md  pyproject.toml
cai-agent/src/cai_agent.egg-info/: PKG-INFO  (+4 more)
cai-agent/tests/: test_agentskills_frontmatter_v2.py  test_agentskills_metadata_nested.py  test_agentskills_util.py  test_api_http_server.py  test_api_status_routes.py  test_asset_pack_repair.py  test_browser_mcp_cli.py  test_browser_provider_cli.py  test_changelog_semantic.py  test_cli_board_and_workflow_snapshot.py  test_cli_misc.py  test_cli_workflow.py  test_command_registry.py  test_context_compaction.py  test_context_usage_bar.py  test_cost_aggregate.py  test_danger_session_and_audit.py  test_doctor_cli.py  test_ecc_ingest_schema_snapshots.py  test_ecc_layout_cli.py  test_ecc_pack_ingest_gate.py  test_export_sync_diff.py  test_factory_routing_and_security.py  test_feedback_bundle_cli.py  test_feedback_cli.py  test_feedback_export.py  test_finalize_task_script.py  test_gateway_danger_contract.py  test_gateway_discord_slack_cli.py  test_gateway_discord_slash_commands.py  test_gateway_lifecycle_cli.py  test_gateway_maps_summarize.py  test_gateway_slack_slash_and_signature.py  test_gateway_telegram_cli.py  test_gateway_telegram_execute_goal.py  test_gateway_user_model_skills_evolution.py  test_graph_compact_triggers.py  test_graph_context_compaction.py  test_graph_live_settings.py  test_graph_tool_payload.py  (+105 more)
(+484 files in other folders)
